--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,11 +30,14 @@
                         <a href="quienessomos.html" class="nav-menu-link">quienes somos?</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href=" cocktails.html" class="nav-menu-link">cocktails</a>
+                        <a href="cocktails.html" class="nav-menu-link">cocktails</a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a href="eventos.html" class="nav-menu-link">eventos</a>
                     </li>
                     <li class="nav-menu-item">
                         <a href="contacto.html" class="nav-menu-link">contacto</a>
-                    </li>
+                    </li>                   
                 </ul>
             </nav>
         </header>
