--- a/pages/cocktails.html
+++ b/pages/cocktails.html
@@ -33,8 +33,11 @@
                         <a href="cocktails.html" class="nav-menu-link">cocktails</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="contacto.html" class="nav-menu-link">contacto</a>
+                        <a href="eventos.html" class="nav-menu-link">eventos</a>
                     </li>
+                    <li class="nav-menu-item">
+                        <a href="contacto.html" class="nav-menu-link">contacto</a>
+                    </li>                   
                 </ul>
             </nav>
         </header>
