--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,38 +14,72 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>    
     <body>
-        <header class="header">
-            <div class="header-logo">
-                <a class="navbar-brand" href="#">
-                    <img src="/img/logo.png" alt="" width="30" height="24">
-                </a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./index.html">
+                <img src="./img/logo.png" alt="logo de la empresa">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html"><p>INICIO</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/quienessomos.html"><p>QUIENES SOMOS?</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/cocktails.html"><p>COCKTAILS</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/eventos.html"><p>EVENTOS</p></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html"><p>CONTACTO</p></a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div>
-                <nav class="nav">          
-                    <ul class="nav-menu">
-                        <li class="nav-menu-item">
-                            <a href="index.html" class="nav-menu-link">inicio</a>
-                        </li>
-                        <li class="nav-menu-item">
-                            <a href="./pages/quienessomos.html" class="nav-menu-link">quienes somos?</a>
-                        </li>
-                        <li class="nav-menu-item">
-                            <a href="./pages/cocktails.html" class="nav-menu-link">cocktails</a>
-                        </li>
-                        <li class="nav-menu-item">
-                            <a href="./pages/eventos.html" class="nav-menu-link">eventos</a>
-                        </li>
-                        <li class="nav-menu-item">
-                            <a href="./pages/contacto.html" class="nav-menu-link">contacto</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div> 
-        </header>
-        <main>
+          </nav>
+          <main>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/carrusel.1.jpg" class="d-block w-100" alt="barman estanislao">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carrusel.2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carrusel.3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carrusel.4.jpg" class="d-block w-100" alt="...">
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
             <section class="title-text">
                 <h1>ESTANISLAO LONDON DRY GIN</h1>
                 <P>Hacemos de la destilacion un arte, para preservar los aromas y sabores de nuestras hierbas</P>
@@ -56,12 +89,12 @@
 
             <div class="card">
                 <div class="cover">
-                    <img src="/img/card.img1.png" alt="">
-                    <div class="img__back"></div>
+                    <img src="./img/card.img1.png" alt="">
+                    <div class="img_back"></div>
                 </div>
                 <div class="description">
                     <h2>NOSOTROS</h2>
-                    <a href="/pages/quienessomos.html">
+                    <a href="./pages/quienessomos.html">
                     <input type="button" value="Leer Más">
                     </a>
                 </div>
@@ -69,12 +102,12 @@
     
             <div class="card">
                 <div class="cover">
-                    <img src="/img/card.img2.png" alt="">
-                    <div class="img__back"></div>
+                    <img src="./img/card.img2.png" alt="">
+                    <div class="img_back"></div>
                 </div>
                 <div class="description">
                     <h2>COCKTAILS</h2>
-                    <a href="/pages/cocktails.html">
+                    <a href="./pages/cocktails.html">
                     <input type="button" value="Leer Más">
                     </a>
                 </div>
@@ -82,12 +115,12 @@
     
             <div class="card">
                 <div class="cover">
-                    <img src="/img/card.img3.png" alt="">
-                    <div class="img__back"></div>
+                    <img src="./img/card.img3.png" alt="">
+                    <div class="img_back"></div>
                 </div>
                 <div class="description">
                     <h2>EVENTOS</h2>
-                    <a href="/pages/eventos.html">
+                    <a href="./pages/eventos.html">
                         <input type="button" value="Leer Más">
                     </a>
                 </div>
