--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,31 +15,42 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/contacto.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>
     <body>
         <header class="header">
-            <nav class="nav">
-                <a href="../index.html" class="logo"><img src="../img/logo.png" alt="logo de la empresa">
-                </a>
-                <ul class="nav-menu">
-                    <li class="nav-menu-item">
-                        <a href="../index.html" class="nav-menu-link">inicio</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="quienessomos.html" class="nav-menu-link">quienes somos?</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="cocktails.html" class="nav-menu-link">cocktails</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="eventos.html" class="nav-menu-link">eventos</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="contacto.html" class="nav-menu-link">contacto</a>
-                    </li>                   
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="../index.html">
+                    <img src="../img/logo.png" alt="logo de la empresa">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="../index.html"><p>INICIO</p></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./quienessomos.html"><p>QUIENES SOMOS?</p></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./cocktails.html"><p>COCKTAILS</p></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./eventos.html"><p>EVENTOS</p></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html"><p>CONTACTO</p></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </header>
         <main>
             <section class="gintonic animate__animated animate__fadeIn">
