--- a/index.html
+++ b/index.html
@@ -49,42 +49,49 @@
               </div>
             </div>
           </nav>
-          <main>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <section class="home">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-controls">
                 <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  </div>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" style="background-image:url('/img/carrusel.1.jpg')">
+                <div class="container">
+                   <h2>ESTANISLAO LONDON <br>DRY GIN</h2>
                 </div>
-                <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/carrusel.1.jpg" class="d-block w-100" alt="barman estanislao">
+              </div>
+              <div class="carousel-item" style="background-image:url('/img/carrusel.2.jpg')">
+                <div class="container">
+                   <p>Hacemos de la destilación un arte, <br>para preservar los aromas y sabores de nuestras hierbas.</p>
+
                 </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel.2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" style="background-image:url('/img/carrusel.3.jpg')">
+                <div class="container">
+                   <h2>Un gin artesanal hecho con aguaribay</h2>
                 </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel.3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" style="background-image:url('/img/carrusel.4.jpg')">
+                <div class="container">
+                   <h2>Cuidamos cada botella<br> como si fuera única</h2>
                 </div>
-                <div class="carousel-item">
-                    <img src="./img/carrusel.4.jpg" class="d-block w-100" alt="...">
-                </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-                </button>
             </div>
-            <section class="title-text">
-                <h1>ESTANISLAO LONDON DRY GIN</h1>
-                <P>Hacemos de la destilacion un arte, para preservar los aromas y sabores de nuestras hierbas</P>
-            </section>
-        </main>    
+          </div>
+           </section>
+            
         <div class="container__cards">
 
             <div class="card">
