--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -19,6 +19,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>
