--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css2/main.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>    
     <body>
@@ -49,7 +50,7 @@
               </div>
             </div>
           </nav>
-          <section class="home">
+          <section class="home container">
             <div id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-controls">
                 <div class="carousel-indicators">
