--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css2/main.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>
     <body>
@@ -53,7 +54,7 @@
               </nav>
         </header>
         <main>
-            <section>
+            <section class="container">
                 <legend>
                     <h1>CONTACTO</h1>
                     <form action="link de accion del formulario" method="get" enctype="multipart/form-data">
@@ -98,7 +99,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-xs-12 col-md-6 col-lg-4">
-                  <a href="index.html">
+                  <a href="../index.html">
                     <img class="logo" src="../img/logo.png"  alt="logo estanislao">
                   </a>
                   </div>
