--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -20,6 +20,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css2/main.css">
     <title>ESTANISLAO DRY GIN</title>
 </head>
     <body>
@@ -55,22 +56,22 @@
      <section id="galeria" class="container">
        <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/chica1.jpg" alt="">
+          <img src="../img/chica1.jpg" alt="">
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/chica2.jpg" alt="">
+          <img src="../img/chica2.jpg" alt="">
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/chica3.jpg" alt="">
+          <img src="../img/chica3.jpg" alt="">
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/grande1.jpg" alt="">
+          <img src="../img/grande1.jpg" alt="">
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/grande2.jpg" alt="">
+          <img src="../img/grande2.jpg" alt="">
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <img src="/img/grande3.jpg" alt="">
+          <img src="../img/grande3.jpg" alt="">
         </div>
        </div>
      </section>
@@ -78,7 +79,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-md-6 col-lg-4">
-              <a href="index.html">
+              <a href="../index.html">
                 <img class="logo" src="../img/logo.png"  alt="logo estanislao">
               </a>
               </div>
