--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="keywords" content="bebida, alcohol, gin tonic, amigos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,10 +16,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css2/main.css">
-    <title>ESTANISLAO DRY GIN</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>ESTANISLAO DRY GIN ~ QUIENES SOMOS?</title>
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,7 +49,7 @@
               </div>
             </div>
           </nav>
-        <section class="gintonic animate__animated animate__fadeIn">
+        <section class=" gintonic animate__animated animate__fadeIn">
             <h1>ESTANISLAO LONDON DRI GIN
             </h1>
             <P class="p1">La escencia de nuestra tierra en un gin, un viaje al Litoral Argentino
@@ -61,10 +59,13 @@
                         con una identidad propia que la definimos a traves del Aguaribay de la región, pero sin perder la tradicion que tiene que tener un London
                         Dry Gin 
                 </p>
-                <img class="aguaribay" src="../img/aguaribay.jpg" alt="aguaribay"><br><br>
+                <img class="aguaribay" src="./img/aguaribay.jpg" alt="aguaribay"><br><br>
             </div>
             <h4>TENEMOS CAPACIDAD, MATERIA PRIMA Y MATERIA GRIS PARA HACER UN GIN DE EXCELENCIA</h4>
         </section>
+        <video src="/videos/quienessomos.mp4">
+
+        </video>
         <footer>
           <div class="container">
             <div class="row">
@@ -80,18 +81,19 @@
                 <div class="contacto">
                   <h3>CONTACTO</h3>
                               <a class="footer-link" href="https://www.instagram.com/estanislaogin/">
-                                  <img  src="../img/instagram.png" alt="logo de instagram">
+                                  <img  src="../img/logoig.svg" alt="logo de instagram">
                               </a>
                               <a class="footer-link" href="https://open.spotify.com/playlist/3somYD13iGC2gF13YcysF9?si=bO18Ixj0QZqrKmq0_-DftA&utm_source=c
-                                  opy-link&dl_branch=1&nd=1"><img  src="../img/spotify.png" alt="logo de spotify">
+                                  opy-link&dl_branch=1&nd=1"><img  src="../img/logospoty.svg" alt="logo de spotify">
                               </a>
                               <a  class="footer-link" href="https://www.facebook.com/estanislaogin/">
-                                  <img  src="../img/facebook.png" alt="logo de facebook">
+                                  <img  src="../img/logoface.svg" alt="logo de facebook">
                               </a> 
                 </div>              
               </div>
             </div>
           </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
